UI-Grid column size fix.
UI-GRID has a couple of gridOptions settings which should handle this setting.
'minimumColumnSize'. After some time trying many options, rather than setting a global setting, minwidth setting were set for every attribute in each entity.

Some tables only have a couple of records, hence the table looks odd. I created code to resize the display based on the number of rows to display, this worked, but for some reason the horizontal scroll bar remained at the original place. I have not found a fix for this yet.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -141,17 +141,8 @@ body {
   margin: 0 !important;
   background-color: transparent !important;
 }
-#demo-bar-badge a {
-  display: block;
-  width: 100%;
-  height: 38px;
-  border-radius: 0;
-  bottom: auto;
-  margin: 0;
-  background: url(/images/examples-logo.png) no-repeat;
-  background-size: 100%;
-  overflow: hidden;
-  text-indent: -9999px;
+.ui-grid-viewport {
+  overflow-x: auto !important;
 }
 #demo-bar-badge:before, #demo-bar-badge:after {
   display: none !important;
